--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
-  color: #333;
+  background-color: rgb(41, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 a {
